[gd_scene load_steps=5 format=3 uid="uid://bt6n0uhsvdypf"]

[ext_resource type="Script" path="res://Common/nav_tile_map.gd" id="2_3ahxf"]
[ext_resource type="PackedScene" uid="uid://cdtd3g0q2royl" path="res://Characters/Mo/Mo.tscn" id="2_ibnmh"]
[ext_resource type="TileSet" uid="uid://dcxonxh0qy21v" path="res://Environment/Fields/fields_tile_set.tres" id="2_vcu05"]
[ext_resource type="PackedScene" uid="uid://i67nftr58v6p" path="res://Common/AStarGrid/a_star_grid.tscn" id="3_yqkjs"]

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_vcu05")
collision_visibility_mode = 1
format = 2
layer_0/name = "base"
layer_0/tile_data = PackedInt32Array(131076, 327680, 0, 196612, 0, 0, 262148, 0, 1, 327684, 0, 2, 393220, 0, 3, 458756, 0, 4, 131077, 327680, 0, 196613, 65536, 0, 262149, 65536, 1, 327685, 65536, 2, 393221, 65536, 3, 458757, 65536, 4, 131078, 327680, 0, 196614, 131072, 0, 262150, 131072, 1, 327686, 131072, 2, 393222, 131072, 3, 458758, 131072, 4, 131079, 327680, 0, 196615, 196608, 0, 262151, 196608, 1, 327687, 196608, 2, 393223, 196608, 3, 458759, 196608, 4, 131080, 327680, 0, 196616, 65536, 0, 262152, 65536, 1, 327688, 65536, 2, 393224, 65536, 3, 458760, 65536, 4, 131081, 327680, 0, 196617, 131072, 0, 262153, 131072, 1, 327689, 131072, 2, 393225, 131072, 3, 458761, 131072, 4, 196618, 196608, 0, 262154, 196608, 1, 327690, 196608, 2, 393226, 196608, 3, 458762, 196608, 4, 131083, 196608, 0, 196619, 196608, 1, 262155, 65536, 1, 327691, 65536, 2, 393227, 65536, 3, 458763, 65536, 4, 131084, 196608, 0, 196620, 196608, 1, 262156, 131072, 1, 327692, 131072, 2, 393228, 131072, 3, 458764, 131072, 4, 131085, 196608, 0, 196621, 196608, 1, 262157, 196608, 1, 327693, 196608, 2, 393229, 196608, 3, 458765, 196608, 4, 131086, 327680, 0, 196622, 65536, 0, 262158, 65536, 1, 327694, 65536, 2, 393230, 65536, 3, 458766, 65536, 4, 131087, 327680, 0, 196623, 131072, 0, 262159, 131072, 1, 327695, 131072, 2, 393231, 131072, 3, 458767, 131072, 4, 131088, 327680, 0, 196624, 196608, 0, 262160, 196608, 1, 327696, 196608, 2, 393232, 196608, 3, 458768, 196608, 4, 131089, 327680, 0, 196625, 65536, 0, 262161, 65536, 1, 327697, 65536, 2, 393233, 65536, 3, 458769, 65536, 4, 131090, 327680, 0, 196626, 131072, 0, 262162, 131072, 1, 327698, 131072, 2, 393234, 131072, 3, 458770, 131072, 4, 131091, 327680, 0, 196627, 196608, 0, 262163, 196608, 1, 327699, 196608, 2, 393235, 196608, 3, 458771, 196608, 4, 131092, 327680, 0, 196628, 262144, 0, 262164, 262144, 1, 327700, 262144, 2, 393236, 262144, 3, 458772, 262144, 4, 131082, 327680, 0)
script = ExtResource("2_3ahxf")

[node name="Mo" parent="." node_paths=PackedStringArray("a_star_grid") instance=ExtResource("2_ibnmh")]
position = Vector2(88, 56)
a_star_grid = NodePath("../AStarGrid")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(224, 80)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="AStarGrid" parent="." node_paths=PackedStringArray("tile_map") instance=ExtResource("3_yqkjs")]
tile_map = NodePath("../TileMap")

[connection signal="entered_map" from="TileMap" to="Mo" method="_on_mouse_entered_map"]
[connection signal="entered_tile" from="TileMap" to="Mo" method="_on_mouse_entered_tile"]
[connection signal="exit_map" from="TileMap" to="Mo" method="_on_mouse_exit_map"]
